--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <main>
     <h2>About Ami Cafe</h2>
     <!--img of avatar-->
-    <img src="../assets/avatar.JPG" width="250" height="200" alt="moomin picture">
+    <img src="./assets/avatar.JPG" width="250" height="200" alt="moomin picture">
     <p class="info"> 
       <br>
       Welcome to Ami Cafe, your one-stop shop for anything related to baking and pastries! At Ami Cafe, we think that baking is more than just a culinary skill; it's also a chance to express oneself and bring people together. Our mission is to encourage and equip home bakers of all abilities to produce delectable sweets in their own homes.Ami Cafe, founded in 2023 by a dedicated baker and foodie, has developed into a thriving group of baking aficionados. We provide a variety of recipes, from tried-and-true favourites to creative concoctions, as well as helpful hints, instructional videos, and educational articles.We at Ami Cafe think that baking is a great journey of learning and discovery. We have something for everyone, whether you are a pastry master or a newbie baker. Join our community, check out our recipes, and let the delicious world of baking inspire your creativity!
